--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+server.port = 80
 spring.datasource.url=jdbc:h2:file:/data/reto3g33
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username: sa
